fixed issue with password request spacing

--- a/mycoldlogic/src/containers/Login/RequestPassword/RequestPassword.css
+++ b/mycoldlogic/src/containers/Login/RequestPassword/RequestPassword.css
@@ -53,6 +53,9 @@
 }
   /* phones less than 600px wide*/
 @media screen and (max-width: 600px){
+  .RequestPassword {
+    justify-content: flex-start;
+  }
   .RequestPassword form {
     width: 100%;
     justify-content: center;
@@ -68,7 +71,8 @@
   }
   .RequestPassword div>p {
     font-size: x-large;
-    margin: 0;
+    text-align: center;
+    margin: 20px;
   }
 }
 /* phones bigger than 600px & less than 768px wide*/
